# Solvronix-Desk

./: .gitignore  CHANGELOG.md  MANIFEST.in  PRIVACY.md  README.md  TERMS.md  license.txt  pyproject.toml  requirements.txt  setup.py
solvronix_desk/: api.py  boot.py  events.py  hooks.py  modules.txt
solvronix_desk/module_def/solvronix_desk/: module_def.json
solvronix_desk/public/css/: command_palette.css  dark_mode.css  login.css  module_cards.css  notification_center.css  progressive_forms.css  sidebar.css  smart_home.css  solvronix_desk.css
solvronix_desk/public/js/: command_palette.js  dark_mode.js  login_theme.js  notification_center.js  progressive_forms.js  sidebar.js  solvronix_desk.js
solvronix_desk/solvronix_desk/doctype/theme_settings/: theme_settings.js  theme_settings.py
solvronix_desk/solvronix_desk/page/smart_home/: smart_home.html  smart_home.js  smart_home.json
solvronix_desk/www/: desk.py
solvronix_theme/: api.py  boot.py  events.py  hooks.py  modules.txt  setup.py
solvronix_theme.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
solvronix_theme/module_def/solvronix_theme/: module_def.json
solvronix_theme/public/css/: command_palette.css  dark_mode.css  login.css  notification_center.css  sidebar.css  solvronix_theme.css
solvronix_theme/public/js/: command_palette.js  dark_mode.js  login_theme.js  module_cards.js  sidebar.js  solvronix_theme.js
solvronix_theme/solvronix_desk/doctype/theme_settings/: theme_settings.js  theme_settings.json  theme_settings.py
solvronix_theme/www/: desk.html
(+3 files in other folders)
