[project]
name = "solvronix_desk"
authors = [
    { name = "Solvronix", email = "sales@solvronix.com" }
]
description = "Professional white-label theme for Frappe/ERPNext v16"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[deploy.dependencies.apt]
packages = []
